--- a/styles/base.css
+++ b/styles/base.css
@@ -92,10 +92,15 @@ section h2 {
     margin: 5px;
     width: 100%;
     text-align: center;
-    padding: 10px;
     background-color: black;
     color: white;
     border-radius: 3px;
+}
+#cardSection1 a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding: 10px;
 }
 #cardSection2 h4 {
     margin: 5px;
