--- a/styles/base.css
+++ b/styles/base.css
@@ -95,6 +95,7 @@ section h2 {
     background-color: black;
     color: white;
     border-radius: 3px;
+
 }
 #cardSection1 a {
     display: block;
@@ -110,6 +111,10 @@ section h2 {
     background-color: var(--backgroundcolorDark);
     color: var(--fontcolorLight);
     border-radius: 3px;
+}
+#credits {
+    padding: 10px;
+    text-align: center;
 }
 
 
