--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -123,7 +123,7 @@ section {
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-gap: 5px;
 	align-items: center;
 }
@@ -162,7 +162,7 @@ section {
 }
 
 .list section img {
-	display: none; /* smaller viewports only */
+	display: none; 
 }
 
 .list section h3 {
@@ -192,7 +192,7 @@ section a {
 
 img {
 	height: 75px;
-	max-width: 100%; /* Images are jerks - Seattle*/
+	max-width: 100%;
 }
 
 footer{
@@ -200,6 +200,7 @@ footer{
     color:var(--fontcolorLight);
     text-align: center;
     padding: 20px;
+    font-family: var(--fontfamilyPrimary);
 }
 
 
