--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -91,115 +91,11 @@ nav.show {
 }
 
 
+/*********Index Main**********/
 
 
 
-/*********Directory Main**********/
-main {
-	margin: 0 auto;
-	padding: 0.5rem;
-	max-width: 900px;
-	background-color: var(--backgroundcolorLight);
-	font-family: var(--fontfamilyPrimary), Helvetica, sans-serif;
-}
-
-.cards {
-	margin: 1rem auto;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 0.5rem;
-	background-color: var(--backgroundcolorLight);
-	text-align: center;
-}
-
-.cards button {
-	padding: 1rem;
-	font-weight: 700;
-}
-
-section {
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 0.5rem;
-	background-color: var(--backgroundcolorLight);
-}
-
-.grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: 5px;
-	align-items: center;
-}
-
-.grid section {
-	text-align: center;
-    
-}
-
-.grid img {
-	border: 1px solid #fff;
-	box-shadow: 0 0 10px #333;
-}
-
-.grid section > * {
-	margin: 0.1rem;
-}
-
-.grid h3 {
-	font-family: "DM Sans";
-}
-
-.list {
-	display: flex;
-	flex-direction: column;
-}
-
-.list section {
-	display: grid;
-	grid-template-columns: 2fr 1fr 1fr;
-	margin: 0;
-	padding: 0.25rem;
-}
-
-.list section > * {
-	margin: 0 1rem;
-}
-
-.list section img {
-	display: none; 
-}
-
-.list section h3 {
-	font-size: 1rem;
-	font-family: var(--fontfamilyPrimary), Helvetica, sans-serif;
-}
-
-.list section:nth-child(even) {
-	background-color: var(--backgroundcolorDark);
-    color: var(--fontcolorLight);
-}
-.list section:nth-child(even) a {
-    color: var(--fontcolorLight);
-}
-section h3 {
-	font-size: 1.5rem;
-}
-
-section p {
-	font-weight: 600;
-	font-size: smaller;
-}
-
-section a {
-	font-family: var(--fontfamilyPrimary), Arial, sans-serif;
-	font-size: 0.70rem;
-	color: var(--backgroundcolorDark);
-	letter-spacing: 1.1pt;
-}
-
-.memberLogo {
-	height: 75px;
-	max-width: 100%;
-}
-
+/*********Index Footer********/
 footer{
     background-color:var(--backgroundcolorDark);
     color:var(--fontcolorLight);
