--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -94,11 +94,11 @@ nav.show {
 /*********Index Main**********/
 #hero img {
     display: block;
-    max-width: 1350px;
-
     margin-left: auto;
     margin-right: auto;
-
+    max-width: 640px;
+    width: 100%;
+    height: auto;
 }
 
 #home {
@@ -116,6 +116,18 @@ nav.show {
     text-align: center;
     color: var(--fontcolorLight);
     background-color: var(--backgroundcolorDark);
+    padding: 5px;
+    margin: 5px;
+}
+
+.spotlightCard {
+    display: grid;
+    border: 1px solid var(--backgroundcolorDark);
+    grid-template-columns: 1fr 1fr;
+}
+
+.spotlightCard h3 {
+    grid-column: 1 / 3;
 }
 
 /*********Index Footer********/
@@ -135,6 +147,7 @@ footer{
     #hero img{
         width: 100%;
         height: 450px;
+        max-width: 1350px;
     }
     nav {
         grid-template-rows: 1fr;
@@ -153,7 +166,10 @@ footer{
         align-items: center;
         width: 200px;
     }
-    .navigation a{
+    .navigation a {
         text-align: center;
+    }
+    .spotlightCard {
+        display: flex;
     }
 }
