--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -27,7 +27,7 @@ header {
     width: 10%;
     height: 100px;
 }
-/*Dynamic Menu and navigation*/
+/**********Dynamic Menu and navigation************/
 #menu {
 	display: block;
 	font-size: 2rem;
@@ -92,13 +92,31 @@ nav.show {
 
 
 /*********Index Main**********/
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
 #hero img {
     display: block;
+    grid-column: 1 / 4;
+    grid-row: 1 / 4;
     margin-left: auto;
     margin-right: auto;
     max-width: 640px;
     width: 100%;
     height: auto;
+}
+.callToAction {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    background-color: var(--secondarycolor);
+    color: var(--fontcolorDark);
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: xx-large;
+    border-radius: 10px;
+    text-align: center;
 }
 
 #home {
@@ -168,6 +186,10 @@ footer{
     }
     .navigation a {
         text-align: center;
+    }
+    #home {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
     }
     .spotlightCard {
         display: flex;
