--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -97,6 +97,12 @@ nav.show {
     grid-template-columns: 1fr 1fr 1fr;
 
 }
+#hero:hover img {
+    opacity: 0.3;
+}
+#hero:hover .callToAction{
+    opacity: 1;
+}
 #hero img {
     display: block;
     grid-column: 1 / 4;
@@ -106,6 +112,8 @@ nav.show {
     max-width: 640px;
     width: 100%;
     height: auto;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) ease; /* Part of transition effect*/
+    backface-visibility: hidden; /* Part of transition effect*/
 }
 .callToAction {
     grid-column: 2 / 3;
@@ -117,6 +125,12 @@ nav.show {
     font-size: xx-large;
     border-radius: 10px;
     text-align: center;
+    /* Part of transition effect*/
+    transition: .5s ease;
+    opacity: 0;
+    transform: translate(0%, 0%);
+    -ms-transform: translate(-50%, -50%)
+
 }
 
 #home {
@@ -137,15 +151,41 @@ nav.show {
     padding: 5px;
     margin: 5px;
 }
-
+.spotlight{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
 .spotlightCard {
     display: grid;
     border: 1px solid var(--backgroundcolorDark);
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: .5fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+.spotlightCard img {
+    display: grid;
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+    align-items: center;
+    justify-items: center;
 }
 
 .spotlightCard h3 {
-    grid-column: 1 / 3;
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+    text-align: left;
+}
+
+.spotlightCard a{
+    grid-column: 2 / 4;
+    grid-row: 2 / 4;
+}
+
+.spotlightCard p {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
 }
 
 /*********Index Footer********/
@@ -191,7 +231,9 @@ footer{
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
     }
-    .spotlightCard {
+    .spotlight {
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
