Forecast added in weather.js

--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -160,6 +160,12 @@ nav.show {
 
 }
 
+/*********** Weather Forecast *************/
+#forecast div {
+    display: flex;
+    padding: 5px;
+    align-items: baseline;
+}
 
 
 /************ Spotlight Section ***************/
