--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -258,6 +258,17 @@ input[type="radio"] {
     padding-top: 0;
     margin-top: 0;
 }
+input [type="radio"] {
+    margin-left: 1.5em;
+    margin-right: 0;
+
+}
+
+
+#formMain {
+    display: grid;
+    grid-template-columns: auto auto;
+}
 
 
 /*********Index Footer********/
