added right and left margin to membership info

--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -279,7 +279,7 @@ input [type="radio"] {
 .membershipCard {
     text-align: center;
     padding: 2em;
-    margin: 2em 0;
+    margin: 2em 1em;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
