--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -282,6 +282,9 @@ input [type="radio"] {
     margin: 2em 1em;
     border: 1px solid #ccc;
     border-radius: 5px;
+    animation: appear 1s linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
 }
 
 .membershipCard p:first-of-type {
@@ -386,4 +389,16 @@ footer{
         flex-direction: row;
         justify-content: space-between;
     }
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+        scale: 0.4;
+    }
+    to {
+        opacity: 1;
+        scale: 1;
+    }
+    
 }
