--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -335,7 +335,23 @@ dialog > ul {
     padding: 5px;
 }
 
+/************ Discovery ***********/
+.mainDiscover {
+    display: grid;
+    grid-template-columns: 1.5fr 2fr;
+    column-gap: 10px;
+}
+.cityCard {
+    padding: 1em;
+    border: 1px solid var(--backgroundcolorDark);
+    margin: 10px;
+}
 
+.pictureColumn img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
 
 
 /*********Index Footer********/
