--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -122,7 +122,7 @@ nav.show {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     background-color: var(--secondarycolor);
-    color: var(--fontcolorDark);
+    color: var(--fontcolorDark);    
     padding: 10px 20px;
     text-decoration: none;
     font-size: xx-large;
@@ -337,20 +337,30 @@ dialog > ul {
 
 /************ Discovery ***********/
 .mainDiscover {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.mainDiscover h1 {
+    margin-left: 10px;
 }
 .cityCard {
     padding: 1em;
     border: 1px solid var(--backgroundcolorDark);
     margin: 10px;
+    font-size: 1.2em;
 }
 
 .pictureColumn img {
     width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+.cityCard ul {
+    margin-left: 20px;
+}
+.cityCard p, .cityCard ul {
+    font-size: .9rem;
 }
 
 
@@ -400,6 +410,11 @@ footer{
     #formMain {
         display: grid;
         grid-template-columns: auto auto;
+    }
+    .mainDiscover {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 10px;
     }
 
 }
