new message and captioning corrected

--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -351,10 +351,40 @@ dialog > ul {
 }
 
 .pictureColumn img {
-    width: 100%;
-    height: 200px;
+    height: 250px;
     object-fit: cover;
+
 }
+.picContainer {
+    position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  .discoverImg {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute; 
+    bottom: 0; 
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1; 
+    width: 100%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .picContainer:hover .overlay {
+    opacity: 1;
+  }
 
 .cityCard ul {
     margin-left: 20px;
@@ -362,6 +392,31 @@ dialog > ul {
 .cityCard p, .cityCard ul {
     font-size: .9rem;
 }
+
+/************ Alert message box **************/
+.alert {
+    grid-column: 1 / 3;
+    padding: 20px;
+    background-color: var(--secondarycolor);
+    color: var(--fontcolorDark);
+    margin-bottom: 15px;
+  }
+  
+  .closebtn {
+    margin-left: 15px;
+    color: var(--fontcolorDark);
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: var(--fontcolorLight);
+  }
+  
 
 
 /*********Index Footer********/
