Modal, addToCart and displayUpdatedCart added. Some CSS for the <dialog>

--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -172,6 +172,29 @@ img {
     text-decoration: none;
 }
 
+/************* Modal ***************/
+dialog {
+    border: 1px solid rgba(0 0 0 / 0.1);
+    border-radius: .25rem;
+    padding: 1rem;
+    width: 90%;
+    max-width: 600px;
+    box-shadow: 0 0 3rem rgba(0 0 0 / 0.3);
+    align-items: center;
+}
+
+dialog::backdrop {
+    background-color: rgba(0 0 0 / 0.5);
+}
+
+dialog button {
+    position: absolute;
+    top: 23px;
+    right:23px;
+    padding: .5rem 1rem;
+    border: 1px solid  rgba(0 0 0 / 0.1);
+}
+
 /*------- Form -------*/
 .wf1 {
     margin-left: 2%;
